--- a/TravelRequests/TravelRequests.Application/TravelRequests.Application.csproj
+++ b/TravelRequests/TravelRequests.Application/TravelRequests.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TravelRequests.Domain\TravelRequests.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
