--- a/TravelRequests/TravelRequests.Infrastructure/TravelRequests.Infrastructure.csproj
+++ b/TravelRequests/TravelRequests.Infrastructure/TravelRequests.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TravelRequests.Domain\TravelRequests.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
