feat: Se agregan repositorios  y configuraciones en program.cs

--- a/TravelRequests/TravelRequests.Infrastructure/TravelRequests.Infrastructure.csproj
+++ b/TravelRequests/TravelRequests.Infrastructure/TravelRequests.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TravelRequests.Application\TravelRequests.Application.csproj" />
     <ProjectReference Include="..\TravelRequests.Domain\TravelRequests.Domain.csproj" />
   </ItemGroup>
 
