--- a/TravelRequests/TravelRequests.Api/TravelRequests.Api.csproj
+++ b/TravelRequests/TravelRequests.Api/TravelRequests.Api.csproj
@@ -6,4 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TravelRequests.Application\TravelRequests.Application.csproj" />
+    <ProjectReference Include="..\TravelRequests.Infrastructure\TravelRequests.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
