feat: se agregan dtos, services, y AuthController

--- a/TravelRequests/TravelRequests.Api/appsettings.json
+++ b/TravelRequests/TravelRequests.Api/appsettings.json
@@ -1,12 +1,17 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TravelRequestsDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=LAPTOP-5QGIE73O\\MSSQLSERVER01;Database=TravelRequestsDb;User Id=sa;Password=12345;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "b0f219c16fe08fbff253abf9b093f9ba",
+    "Issuer": "TravelRequestsApi",
+    "Audience": "TravelRequestsApiUsers"
   },
   "AllowedHosts": "*"
 }
