--- a/TravelRequests/TravelRequests.Application/TravelRequests.Application.csproj
+++ b/TravelRequests/TravelRequests.Application/TravelRequests.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.10" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TravelRequests.Domain\TravelRequests.Domain.csproj" />
   </ItemGroup>
 
