--- a/TravelRequests/TravelRequests.Api/appsettings.json
+++ b/TravelRequests/TravelRequests.Api/appsettings.json
@@ -2,6 +2,21 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-5QGIE73O\\MSSQLSERVER01;Database=TravelRequestsDb;User Id=sa;Password=12345;TrustServerCertificate=True;"
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "File", "Args": { "path": "logs/log-.txt", "rollingInterval": "Day" } }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
